# epoch-cli

./: .gitignore  Dockerfile  README.md  epoch  epochclient.py  epochutils.py  input.txt  pyproject.toml  requirements.txt
epoch_cli/: epoch.py  epoch_cli.py  epochclient.py  example.txt  requirements.txt  setting.ini
epoch_cli/testingEpochCli/: pyvenv.cfg
epochplugins/: cluster.py
plugins/: cluster.py  runs.py  topology.py
